# CeresSLAM

./: CMakeLists.txt  README.md
include/one_dimension/: estimator_base.h  full_slam_estimator.h  one_dimension_sim.h  online_slam_estimator.h  range_meas.h  state.h
include/one_dimension/factors/: landmark_anchor.h  odometry_constraint.h  position_constraint.h  range_constraint.h  velocity_constraint.h
include/unicycle_landmarks/: estimator_base.h  full_slam_estimator.h  range_bearing_meas.h  state.h  unicycle_sim.h
include/unicycle_landmarks/factors/: angle_local_parameterization.h  motion_model_factor.h  normalize_angle.h  odometry_factor.h  range_bearing_factor.h  se2_parameterization.h
include/utils/: circular_buffer.h  frame_helper.h  logger.h  progress_bar.h  yaml_helpers.h
params/one_dimension/: sim_params.yaml
params/unicycle_sim/: sim_params.yaml
scripts/: plot_results.py
scripts/one_dimension/: plot_online_results.py  plot_results.py
scripts/unicycle/: plot_full_slam_results.py
src/examples/: one_dimension.cpp  online_slam_1d.cpp  unicycle_sim.cpp
src/one_dimension/: one_dimension_sim.cpp
src/unicycle_sim/: full_slam.cpp  unicycle_sim.cpp
